Correct test class for the randomgenertorserviceImpl